# c3listener

./: .gitignore  CMakeLists.txt  Makefile  Makefile.am  autogen.sh  c3listener.conf  configure.ac  main.c
cmake/Modules/: FindLibEvhtp.cmake  FindLibJson-c.cmake  FindLibUci.cmake  GetGitRevisionDescription.cmake
debian/: c3listener.service  hostname-config.service
doc/: C3 Filtering Exploration.ipynb  Derivations, Kalman C3.ipynb  packet-format.md
po/: ChangeLog  Makevars  c3listener.pot
scripts/: cleanup-format.sh
src/: Makefile.am  avahi.c  beacon.c  beacon.h  ble.c  ble.h  c3listener.h  config.c  config.h  gettext.h  hash.c  hash.h  hostname.c  hostname.h  http.c  http.h  ipc-privileged.c  ipc-privileged.h  ipc.c  ipc.h  kalman.c  kalman.h  log.c  log.h  main.c  report.c  report.h  time_util.c  time_util.h  uci.c  uci.h  uci_json.c  uci_json.h  udp.c  udp.h
web/: bluetooth.html  index.html  login.html  network.html
web/css/: main.css
web/js/: ajax.js  bluetooth.js  dashboard.js  forms.js  network.js  util.js
web/json/: beacons.json  net_status.json  server.json
